# soul

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/: auth.py  conversation_agent.py  coordinator.py  database.py  main.py  model_router.py  models.py  perception_planning.py  phase_manager.py  schemas.py
backend/app/routers/: analytics.py  assessment.py  auth.py  chat.py  diary.py  growth.py  training.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/assessment/: page.tsx
frontend/src/app/assessment/[id]/: page.tsx
frontend/src/app/assessment/history/: page.tsx
frontend/src/app/assessment/result/[id]/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/diary/: page.tsx
frontend/src/app/diary/[id]/: page.tsx
frontend/src/app/diary/write/: page.tsx
frontend/src/app/growth/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/training/: page.tsx
frontend/src/app/training/[id]/: page.tsx
frontend/src/app/training/history/: page.tsx
frontend/src/components/: ConfirmDialog.tsx  PageErrorState.tsx  PageLoading.tsx  StatusBanner.tsx
frontend/src/hooks/: useRequireAuth.ts
frontend/src/lib/: api.ts  auth.ts  chat.ts  diary.ts
